# OpenCVConeDetectionCPlusPlus

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  ConeDetector.cpp  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  ExternalImageReader.cpp  HSVProcessor.h  HsvProcessor.cpp  Makefile  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  VideoSource.cpp  VideoSource.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake.sln  cmake.vcxproj  cmake_install.cmake  main.cpp  main.sln  main.vcxproj  main.vcxproj.filters  opencvtest  opencvtest.vcxproj
main.dir/Release/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  main.lastbuildstate
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
